--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
 }
 
 .top-third {
     background-color: #1f2937;
     display: flex;
     flex-wrap: wrap;
+    flex: 1;
 }
 .title {
     display: flex;
@@ -37,6 +36,7 @@ body {
         }
 .upper-section {
     display: flex;
+    flex: 1;
 
 
 }
@@ -47,7 +47,7 @@ body {
 .lower-section {
     display: flex;
     background-color: lightgray;
-    
+    flex: 1;
 }
     .quote {
         
@@ -59,7 +59,8 @@ body {
 
     .upper-footer {
         display: flex;
-        flex-basis: 100%;
+        flex: 1;
+  
 
     }
 
