Center footer-box in upper footer

--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ body {
     .upper-footer {
         display: flex;
         flex: 1;
-  
+        justify-content: center;
+        align-items: center;
 
     }
 
