--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex: 1;
+    padding: 30px;
+    box-sizing: border-box;
 }
 .title {
     display: flex;
@@ -37,6 +39,7 @@ body {
 .upper-section {
     display: flex;
     flex: 1;
+    padding: 30px;
 
 
 }
@@ -48,13 +51,16 @@ body {
     display: flex;
     background-color: lightgray;
     flex: 1;
+    padding: 30px;
+    justify-content: center;
 }
     .quote {
+        align-self: flex-start;
         
     }
 
     .credit {
-
+        align-self: flex-end;
     }
 
     .upper-footer {
@@ -62,6 +68,7 @@ body {
         flex: 1;
         justify-content: center;
         align-items: center;
+        padding: 30px;
 
     }
 
