Add div ID for random info in html and css
Allows editing of sections to be stacked above each other, sothat "some random information" can be a title.

--- a/style.css
+++ b/style.css
@@ -40,11 +40,21 @@ body {
     display: flex;
     flex: 1;
     padding: 30px;
-
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
+
+#rndinfo {
+    flex: 0 0 100%;
+}
+
 .boxes {
     display: flex;
+}
+
+figcaption {
+
 }
 
 .lower-section {
