--- a/style.css
+++ b/style.css
@@ -56,10 +56,13 @@ body {
 }
 
 figure {
-    border-color: #3882f6;
-    border: 3px;
-    flex: 0 0 auto;
+    justify-content: center;
+    text-align: center;
+}
 
+img{
+    width: 100px;
+    height: 100px;
 }
 
 .lower-section {
