--- a/style.css
+++ b/style.css
@@ -10,19 +10,32 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex: 1;
-    padding: 30px;
+    padding: 30px 300px;
     box-sizing: border-box;
 }
 .title {
     display: flex;
     flex: 0 0 100%;
     justify-content: space-between;
+    color: #f9faf8;
 }
+
+        ul {
+            margin: 0;
+            padding: 0;
+           
+        }
+        a{
+              text-decoration: none;
+             color: #f9faf8;
+        }
 
 .header-section {
     display: flex;
     flex: 1;
     justify-content: center;
+    gap: 20px;
+
 }
 
     .left-header{
@@ -31,11 +44,22 @@ body {
 
         .header-title {
             /* what TOP calls "Hero Text" -> for font and etc */
+            font-size: 48px;
+            font-weight: 900;
+            color: #f9faf8;
         }
 
         .header-subtext {
+            color: #f9faf8;
+        }
+
+        .header-button{
 
         }
+
+    .header-image{
+        width: 160px; height: 150px;
+    }
 .upper-section {
     display: flex;
     flex: 1;
